@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160517"
-#define public MagickPackageReleaseDate "snapshot-20160517"
+#define public MagickPackageVersionAddendum ".020160521"
+#define public MagickPackageReleaseDate "snapshot-20160521"
